--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="dist/css/app.min.css">
     <title>Bootcamp</title>
 </head>
-<body>
+<body class="bg-stars">
 
-<h1>Bootcamp</h1>
-<h2>Bootcamp</h2>
-<h3>Bootcamp</h3>
-<h4>Bootcamp</h4>
-<h5>Bootcamp</h5>
-<h6>Bootcamp</h6>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa doloribus est et ex molestiae perferendis, qui quod rem sed voluptatum! Atque cumque dignissimos dolores earum in non perspiciatis, sed ut!</p>
+<main id="landing-page">
+    <section>
+        <h1>Welcome Rocketeer !</h1>
+        <a href="start.html" class="btn-1">Start Questionnaire</a>
+        <a href="#" class="btn-2">Submitted Applications</a>
+        <div class="welcome-rocketmen">
+            <img src="dist/img/rocket-man.svg" class="d-block" />
+        </div>
+    </section>
+</main>
 
 <script src="dist/js/app.min.js"></script>
 
