questionnaire layout & text

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body class="bg-stars">
 
-<main id="landing-page">
+<main class="landing-page">
     <section>
         <h1>Welcome Rocketeer !</h1>
-        <a href="start.html" class="btn-1">Start Questionnaire</a>
+        <a href="questionnaire.html" class="btn-1">Start Questionnaire</a>
         <a href="#" class="btn-2">Submitted Applications</a>
         <div class="welcome-rocketmen">
             <img src="dist/img/rocket-man.svg" class="d-block" />
