personal information web form

--- a/questionnaire.html
+++ b/questionnaire.html
@@ -12,9 +12,26 @@
 <main class="questionnaire-page">
     <section class="side-left">
         <article class="tab active">
-            <form>
+            <form class="form">
                 <h1>Hey, Rocketeer, what are your coordinates?</h1>
-                <p>Web Form</p>
+                <div class="tab-content">
+                    <div class="field">
+                        <input type="text" id="first_name" placeholder="First name" maxlength="25">
+                        <span></span>
+                    </div>
+                    <div class="field">
+                        <input type="text" id="last_name" placeholder="Last name" maxlength="25">
+                        <span></span>
+                    </div>
+                    <div class="field">
+                        <input type="email" id="email" placeholder="E Mail" maxlength="50">
+                        <span></span>
+                    </div>
+                    <div class="field">
+                        <input type="tel" id="phone" placeholder="+995 5_ _ _ _" maxlength="13">
+                        <span></span>
+                    </div>
+                </div>
             </form>
         </article>
     </section>
