about your skills web form

--- a/questionnaire.html
+++ b/questionnaire.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="dist/css/app.min.css">
     <title>Bootcamp</title>
 </head>
@@ -11,7 +12,7 @@
 
 <main class="questionnaire-page">
     <section class="side-left">
-        <article class="tab active">
+        <article class="tab">
             <form class="form">
                 <h1>Hey, Rocketeer, what are your coordinates?</h1>
                 <div class="tab-content">
@@ -34,11 +35,52 @@
                 </div>
             </form>
         </article>
+        <article class="tab active">
+            <form class="form">
+                <h1>Tell us about your skills</h1>
+                <div class="tab-content">
+                    <div id="about-form">
+                        <div class="field">
+                            <select name="skills" id="skills" class="dropdown">
+                                <option disabled selected>Skills</option>
+                                <option value="1">HTML</option>
+                                <option value="2">CSS</option>
+                                <option value="3">PHP</option>
+                            </select>
+                            <span></span>
+                        </div>
+                        <div class="field">
+                            <input type="text" id="years" placeholder="Experience Duration in Years" maxlength="2">
+                            <span></span>
+                        </div>
+                        <div class="float-right">
+                            <button class="btn-add add-programming-language">Add Programming Language</button>
+                        </div>
+                    </div>
+
+                    <table class="skills-table">
+                        <tr>
+                            <td>HTML</td>
+                            <td>years of experience: 2</td>
+                            <td>
+                                <a class="delete-record">
+                                    <i class="fa fa-times-circle-o " aria-hidden="true"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </form>
+        </article>
     </section>
     <section class="side-right">
-        <article class="content active">
+        <article class="content">
             <h1>Redberry Origins</h1>
             <p>You watch “What? Where? When?” Yeah. Our founders used to play it. That’s where they got a question about a famous American author and screenwriter Ray Bradbury. Albeit, our CEO Gaga Darsalia forgot the exact name and he answered Ray Redberry. And at that moment, a name for a yet to be born company was inspired - Redberry 😇</p>
+        </article>
+        <article class="content active">
+            <h1>A bit about our battles</h1>
+            <p>As we said, Redberry has been on the field for quite some time now, and we have touched and embraced a variety of programming languages, technologies, philosophies, and frameworks. We are battle-tested in PHP Laravel Stack with Vue.js, refined in React, and allies with Serverside technologies like Docker and Kubernetes, and now we have set foot in the web3 industry.</p>
         </article>
     </section>
 </main>
