--- a/questionnaire.html
+++ b/questionnaire.html
@@ -35,7 +35,7 @@
                 </div>
             </form>
         </article>
-        <article class="tab active">
+        <article class="tab">
             <form class="form">
                 <h1>Tell us about your skills</h1>
                 <div class="tab-content">
@@ -72,15 +72,80 @@
                 </div>
             </form>
         </article>
+        <article class="tab active">
+            <form class="form">
+                <h1>Covid Stuff</h1>
+                <div class="tab-content">
+                    <p>How would you prefer to work?</p>
+                    <div class="radio-buttons">
+                        <div class="field">
+                            <input type="radio" name="work_preference" id="from_office" value="from_office">
+                            <label for="from_office">From Sairme office</label>
+                        </div>
+                        <div class="field">
+                            <input type="radio" name="work_preference" id="from_home" value="from_home">
+                            <label for="from_home">From Home</label>
+                        </div>
+                        <div class="field">
+                            <input type="radio" name="work_preference" id="hybrid" name="hybrid">
+                            <label for="hybrid">Hybrid</label>
+                        </div>
+                        <span></span>
+                    </div>
+
+                    <p>Did you contact covid 19? :(</p>
+                    <div class="radio-buttons">
+                        <div class="field">
+                            <input type="radio" name="had_covid" id="had_covid_yes" value="true">
+                            <label for="had_covid_yes">Yes</label>
+                        </div>
+                        <div class="field">
+                            <input type="radio" name="had_covid" id="had_covid_no" value="false">
+                            <label for="had_covid_no">No</label>
+                        </div>
+                        <span></span>
+                    </div>
+
+                    <p>When?</p>
+                    <div class="field mb-6">
+                        <input type="date" id="had_covid_at">
+                        <span></span>
+                    </div>
+
+                    <p>Have you been vaccinated?</p>
+                    <div class="radio-buttons">
+                        <div class="field">
+                            <input type="radio" name="vaccinated" id="vaccinated_yes" value="true">
+                            <label for="vaccinated_yes">Yes</label>
+                        </div>
+                        <div class="field">
+                            <input type="radio" name="vaccinated" id="vaccinated_no" value="false">
+                            <label for="vaccinated_no">No</label>
+                        </div>
+                        <span></span>
+                    </div>
+
+                    <p>When did you get your last covid vaccine?</p>
+                    <div class="field">
+                        <input type="date" id="vaccinated_at">
+                        <span></span>
+                    </div>
+                </div>
+            </form>
+        </article>
     </section>
     <section class="side-right">
         <article class="content">
             <h1>Redberry Origins</h1>
             <p>You watch “What? Where? When?” Yeah. Our founders used to play it. That’s where they got a question about a famous American author and screenwriter Ray Bradbury. Albeit, our CEO Gaga Darsalia forgot the exact name and he answered Ray Redberry. And at that moment, a name for a yet to be born company was inspired - Redberry 😇</p>
         </article>
-        <article class="content active">
+        <article class="content">
             <h1>A bit about our battles</h1>
             <p>As we said, Redberry has been on the field for quite some time now, and we have touched and embraced a variety of programming languages, technologies, philosophies, and frameworks. We are battle-tested in PHP Laravel Stack with Vue.js, refined in React, and allies with Serverside technologies like Docker and Kubernetes, and now we have set foot in the web3 industry.</p>
+        </article>
+        <article class="content active">
+            <h1>Redberry Covid Policies</h1>
+            <p>As this infamous pandemic took over the world, we adjusted our working practices so that our employees can be as safe and comfortable as possible. We have a hybrid work environment, so you can either work from home or visit our lovely office on Sairme Street. If it was up to us, we would love you to see us in the office because we think face-to-face communications &gt; Zoom meetings. Both on the fun and productivity scales.</p>
         </article>
     </section>
 </main>
