--- a/questionnaire.html
+++ b/questionnaire.html
@@ -72,7 +72,7 @@
                 </div>
             </form>
         </article>
-        <article class="tab active">
+        <article class="tab">
             <form class="form">
                 <h1>Covid Stuff</h1>
                 <div class="tab-content">
@@ -133,6 +133,39 @@
                 </div>
             </form>
         </article>
+        <article class="tab active">
+            <form class="form">
+                <h1>What about you?</h1>
+                <div class="tab-content">
+                    <p>Would you attend Devtalks and maybe also organize your own?</p>
+
+                    <div class="radio-buttons">
+                        <div class="field">
+                            <input type="radio" name="will_organize_devtalk" value="true" id="will_organize_devtalk_yes">
+                            <label for="will_organize_devtalk_yes">Yes</label>
+                        </div>
+                        <div class="field">
+                            <input type="radio" name="will_organize_devtalk" value="false" id="will_organize_devtalk_no">
+                            <label for="will_organize_devtalk_no">No</label>
+                        </div>
+                        <span></span>
+                    </div>
+
+                    <p>What would you speak about at Devtalk?</p>
+                    <div class="field">
+                        <textarea id="devtalk_topic" rows="5" placeholder="I would..."></textarea>
+                        <span></span>
+                    </div>
+
+                    <p>Tell us something special?</p>
+                    <div class="field">
+                        <textarea id="something_special" rows="3" placeholder="I..."></textarea>
+                        <span></span>
+                    </div>
+
+                </div>
+            </form>
+        </article>
     </section>
     <section class="side-right">
         <article class="content">
@@ -143,9 +176,13 @@
             <h1>A bit about our battles</h1>
             <p>As we said, Redberry has been on the field for quite some time now, and we have touched and embraced a variety of programming languages, technologies, philosophies, and frameworks. We are battle-tested in PHP Laravel Stack with Vue.js, refined in React, and allies with Serverside technologies like Docker and Kubernetes, and now we have set foot in the web3 industry.</p>
         </article>
-        <article class="content active">
+        <article class="content">
             <h1>Redberry Covid Policies</h1>
             <p>As this infamous pandemic took over the world, we adjusted our working practices so that our employees can be as safe and comfortable as possible. We have a hybrid work environment, so you can either work from home or visit our lovely office on Sairme Street. If it was up to us, we would love you to see us in the office because we think face-to-face communications &gt; Zoom meetings. Both on the fun and productivity scales.</p>
+        </article>
+        <article class="content active">
+            <h1>Redberrian Insights</h1>
+            <p>We were soo much fun before the pandemic started! Parties almost every weekend and lavish employee birthday celebrations! Unfortunately, covid ruined that fun like it did almost everything else in the world. But we try our best to zhuzh it up a bit. For example, we host biweekly Devtalks where our senior and lead developers talk about topics they are passionate about. Previous topics have included Web3, NFT, Laravel 9, Kubernetes, etc. We hold these talks in the office but you can join our Zoom broadcast as well. Feel free to join either as an attendee or a speaker!</p>
         </article>
     </section>
 </main>
