--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="page active">
     <main class="questionnaire">
         <section class="side-left">
-            <article class="tab active">
+            <article class="tab tab1 active">
                 <form class="form">
                     <h1>Hey, Rocketeer, what are your coordinates?</h1>
                     <div class="tab-content">
@@ -49,7 +49,7 @@
                     </div>
                 </form>
             </article>
-            <article class="tab">
+            <article class="tab tab2">
                 <form class="form">
                     <h1>Tell us about your skills</h1>
                     <div class="tab-content">
@@ -86,7 +86,7 @@
                     </div>
                 </form>
             </article>
-            <article class="tab">
+            <article class="tab tab3">
                 <form class="form">
                     <h1>Covid Stuff</h1>
                     <div class="tab-content">
@@ -147,7 +147,7 @@
                     </div>
                 </form>
             </article>
-            <article class="tab">
+            <article class="tab tab4">
                 <form class="form">
                     <h1>What about you?</h1>
                     <div class="tab-content">
@@ -202,19 +202,19 @@
             </ul>
         </section>
         <section class="side-right">
-            <article class="content active">
+            <article class="content content1 active">
                 <h1>Redberry Origins</h1>
                 <p>You watch “What? Where? When?” Yeah. Our founders used to play it. That’s where they got a question about a famous American author and screenwriter Ray Bradbury. Albeit, our CEO Gaga Darsalia forgot the exact name and he answered Ray Redberry. And at that moment, a name for a yet to be born company was inspired - Redberry 😇</p>
             </article>
-            <article class="content">
+            <article class="content content2">
                 <h1>A bit about our battles</h1>
                 <p>As we said, Redberry has been on the field for quite some time now, and we have touched and embraced a variety of programming languages, technologies, philosophies, and frameworks. We are battle-tested in PHP Laravel Stack with Vue.js, refined in React, and allies with Serverside technologies like Docker and Kubernetes, and now we have set foot in the web3 industry.</p>
             </article>
-            <article class="content">
+            <article class="content content3">
                 <h1>Redberry Covid Policies</h1>
                 <p>As this infamous pandemic took over the world, we adjusted our working practices so that our employees can be as safe and comfortable as possible. We have a hybrid work environment, so you can either work from home or visit our lovely office on Sairme Street. If it was up to us, we would love you to see us in the office because we think face-to-face communications &gt; Zoom meetings. Both on the fun and productivity scales.</p>
             </article>
-            <article class="content">
+            <article class="content content4">
                 <h1>Redberrian Insights</h1>
                 <p>We were soo much fun before the pandemic started! Parties almost every weekend and lavish employee birthday celebrations! Unfortunately, covid ruined that fun like it did almost everything else in the world. But we try our best to zhuzh it up a bit. For example, we host biweekly Devtalks where our senior and lead developers talk about topics they are passionate about. Previous topics have included Web3, NFT, Laravel 9, Kubernetes, etc. We hold these talks in the office but you can join our Zoom broadcast as well. Feel free to join either as an attendee or a speaker!</p>
             </article>
