get skills using fetch from api

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="page active">
     <main class="questionnaire">
         <section class="side-left">
-            <article class="tab tab1 active">
+            <article class="tab tab1">
                 <form class="form">
                     <h1>Hey, Rocketeer, what are your coordinates?</h1>
                     <div class="tab-content">
@@ -49,18 +49,13 @@
                     </div>
                 </form>
             </article>
-            <article class="tab tab2">
+            <article class="tab tab2 active">
                 <form class="form">
                     <h1>Tell us about your skills</h1>
                     <div class="tab-content">
                         <div id="about-form">
                             <div class="field">
-                                <select name="skills" id="skills" class="dropdown">
-                                    <option disabled selected>Skills</option>
-                                    <option value="1">HTML</option>
-                                    <option value="2">CSS</option>
-                                    <option value="3">PHP</option>
-                                </select>
+                                <select name="skills" id="skills" class="dropdown"></select>
                                 <span></span>
                             </div>
                             <div class="field">
