add programming skills and experience duration in years

--- a/index.html
+++ b/index.html
@@ -67,17 +67,7 @@
                             </div>
                         </div>
 
-                        <table class="skills-table">
-                            <tr>
-                                <td>HTML</td>
-                                <td>years of experience: 2</td>
-                                <td>
-                                    <a class="delete-record">
-                                        <i class="fa fa-times-circle-o " aria-hidden="true"></i>
-                                    </a>
-                                </td>
-                            </tr>
-                        </table>
+                        <table class="skills-table"></table>
                     </div>
                 </form>
             </article>
