get submitted application data

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- page1: Landing -->
-<div class="pages page1 stars">
+<div class="pages page1 stars active">
     <main class="landing">
         <section>
             <h1>Welcome Rocketeer !</h1>
@@ -229,7 +229,7 @@
 </div>
 
 <!-- page5: submit-content -->
-<div class="pages page5 active">
+<div class="pages page5">
     <main class="submitted">
         <h1>Submitted Application</h1>
         <section>
